Completed settings page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,8 @@ body {
   height: 100%;
   vertical-align: baseline;
 }
+
+.ant-input-group-addon {
+  width: 120px !important;
+  background-color: rgba(255,255,255,0.8);
+}
