--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,14 @@ body {
   width: 120px !important;
   background-color: rgba(255,255,255,0.8);
 }
+
+button {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none !important;
+}
