--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ body {
   background-color: rgba(255,255,255,0.8);
 }
 
-button {
+button, a {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
